--- a/VictuzBetaAPI/VictuzBetaAPI.csproj
+++ b/VictuzBetaAPI/VictuzBetaAPI.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\VictuzBeta\VictuzBeta.csproj" />
   </ItemGroup>
 
 </Project>
