Beta version adaptation

--- a/VictuzBeta/appsettings.Development.json
+++ b/VictuzBeta/appsettings.Development.json
@@ -1,8 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "DefaultConnection": "Data Source=.;Initial Catalog=VictuzBetaDB;Integrated Security=true;TrustServerCertificate=True;",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
