I fixed my f up?

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,34 @@ VictuzBeta/obj
 
 # API
 VictuzBeta/VictuzBetaAPI/obj
+/.vs/VictuzBeta/v17/.wsuo
+/.vs/VictuzBeta/FileContentIndex/1424747d-c989-4217-8ee5-a01df9bfc704.vsidx
+/.vs/VictuzBeta/v17/DocumentLayout.json
+/.vs/slnx.sqlite
+/.vs/VSWorkspaceState.json
+/VictuzBeta/.vs/VictuzBeta/FileContentIndex/27fdf8a7-5aa8-4e2d-90d6-89344562b9ac.vsidx
+/VictuzBeta/.vs/VictuzBeta/FileContentIndex/6299cecb-d274-4346-8341-2ec92eed84e1.vsidx
+/VictuzBeta/.vs/VictuzBeta/FileContentIndex/6cae00b2-9e99-4cf5-9fff-27cdbaff1b1a.vsidx
+/VictuzBeta/.vs/VictuzBeta/FileContentIndex/73e67b6b-1db3-47d4-a43e-b4c33cf9cb4c.vsidx
+/VictuzBeta/.vs/VictuzBeta/FileContentIndex/e70c088a-0bd9-43a0-b82b-2265b8d8cdf3.vsidx
+/VictuzBeta/.vs/VictuzBeta/v17/.suo
+/VictuzBeta/.vs/VictuzBeta/v17/DocumentLayout.backup.json
+/VictuzBeta/.vs/VictuzBeta/v17/DocumentLayout.json
+/VictuzBeta/obj/Debug/net8.0/VictuzBeta.AssemblyInfo.cs
+/VictuzBeta/obj/Debug/net8.0/VictuzBeta.AssemblyInfoInputs.cache
+/VictuzBeta/obj/Debug/net8.0/VictuzBeta.assets.cache
+/VictuzBeta/obj/Debug/net8.0/VictuzBeta.GeneratedMSBuildEditorConfig.editorconfig
+/VictuzBeta/obj/project.assets.json
+/VictuzBeta/obj/project.nuget.cache
+/VictuzBeta/obj/VictuzBeta.csproj.nuget.dgspec.json
+/VictuzBeta/obj/VictuzBeta.csproj.nuget.g.props
+/VictuzBeta/obj/VictuzBeta.csproj.nuget.g.targets
+/VictuzBetaAPI/obj/Debug/net8.0/VictuzBetaAPI.AssemblyInfo.cs
+/VictuzBetaAPI/obj/Debug/net8.0/VictuzBetaAPI.AssemblyInfoInputs.cache
+/VictuzBetaAPI/obj/Debug/net8.0/VictuzBetaAPI.assets.cache
+/VictuzBetaAPI/obj/Debug/net8.0/VictuzBetaAPI.GeneratedMSBuildEditorConfig.editorconfig
+/VictuzBetaAPI/obj/project.assets.json
+/VictuzBetaAPI/obj/project.nuget.cache
+/VictuzBetaAPI/obj/VictuzBetaAPI.csproj.nuget.dgspec.json
+/VictuzBetaAPI/obj/VictuzBetaAPI.csproj.nuget.g.props
+/VictuzBetaAPI/obj/VictuzBetaAPI.csproj.nuget.g.targets
