--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,4 @@ FodyWeavers.xsd
 /VictuzBetaAPI/obj/VictuzBetaAPI.csproj.nuget.g.targets
 /VictuzBeta/.vs/VictuzBeta/DesignTimeBuild/.dtbcache.v2
 /VictuzBeta/.vs/VictuzBeta/v17/.futdcache.v2
+/VictuzBeta/appsettings.Development.json
